[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/BreadCrumbs.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/theme/panel_breadcrumbs.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/UINavigator.gd" type="Script" id=4]
[ext_resource path="res://ui/icons/icon_settings.png" type="Texture2D" id=5]
[ext_resource path="res://ui/icons/icon_report.png" type="Texture2D" id=6]
[ext_resource path="res://ui/screens/course_outliner/CourseOutliner.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/icons/navigation_back.png" type="Texture2D" id=8]
[ext_resource path="res://ui/icons/navigation_outliner.png" type="Texture2D" id=9]
[ext_resource path="res://ui/icons/icon_godot_head.svg" type="Texture2D" id=10]
[ext_resource path="res://ui/components/FullScreenButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/components/popups/LessonDonePopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/components/QuitButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/components/SalePopup.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/components/GDQuestCreditsLabel.tscn" type="PackedScene" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="UINavigator" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Layout" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="Layout"]
offset_right = 1920.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 0, 40 )
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/Header"]
offset_right = 1920.0
offset_bottom = 48.0
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 0
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 0

[node name="HeaderContent" type="HBoxContainer" parent="Layout/Header/MarginContainer"]
offset_left = 12.0
offset_right = 1908.0
offset_bottom = 48.0

[node name="HomeButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
visible = false
offset_left = 48.0
offset_right = 92.0
offset_bottom = 48.0
tooltip_text = "Go back to the main menu"
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
flat = true

[node name="OutlinerButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_right = 32.0
offset_bottom = 48.0
tooltip_text = "Open the course index"
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
flat = true

[node name="BackButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_left = 48.0
offset_right = 80.0
offset_bottom = 48.0
tooltip_text = "Go back in your navigation history"
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true

[node name="BreadCrumbs" parent="Layout/Header/MarginContainer/HeaderContent" instance=ExtResource( 2 )]
offset_left = 96.0
offset_right = 96.0

[node name="Spacer" type="Control" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_left = 112.0
offset_right = 1273.0
offset_bottom = 48.0
pivot_offset = Vector2( -514, 99 )
size_flags_horizontal = 3

[node name="SaleButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_left = 1289.0
offset_right = 1656.0
offset_bottom = 48.0
tooltip_text = "Go back in your navigation history"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color( 1, 0.960784, 0.25098, 1 )
theme_override_colors/font_hover_color = Color( 0.960784, 0.980392, 0.980392, 1 )
theme_override_colors/font_pressed_color = Color( 1, 0.960784, 0.25098, 1 )
theme_override_styles/focus = SubResource( 1 )
text = "CHRISTMAS SALE - 50% OFF"
flat = true

[node name="ReportButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_left = 1672.0
offset_right = 1720.0
offset_bottom = 48.0
tooltip_text = "Report an issue"
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
flat = true

[node name="SettingsButton" type="Button" parent="Layout/Header/MarginContainer/HeaderContent"]
offset_left = 1736.0
offset_right = 1784.0
offset_bottom = 48.0
tooltip_text = "Configure the app"
mouse_default_cursor_shape = 2
icon = ExtResource( 5 )
flat = true

[node name="FullScreenButton" parent="Layout/Header/MarginContainer/HeaderContent" instance=ExtResource( 11 )]
offset_left = 1800.0
offset_right = 1840.0
offset_bottom = 47.0

[node name="QuitButton" parent="Layout/Header/MarginContainer/HeaderContent" instance=ExtResource( 13 )]
offset_left = 1856.0
offset_right = 1896.0
offset_bottom = 47.0

[node name="Content" type="Panel" parent="Layout"]
offset_top = 48.0
offset_right = 1920.0
offset_bottom = 1080.0
clip_contents = true
mouse_filter = 2
size_flags_vertical = 3

[node name="ScreenContainer" type="PanelContainer" parent="Layout/Content"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CourseOutliner" parent="Layout/Content" instance=ExtResource( 7 )]
visible = false

[node name="LessonDonePopup" parent="." instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Tween" type="Tween" parent="."]

[node name="SalePopup" parent="." instance=ExtResource( 14 )]
title = "CHRISTMAS SALE"
only_until_string = "the end of the year"
end_datetime_iso = "2023-01-01T00:00"
sale_url = "https://gdquest.mavenseed.com/courses/"

[node name="GDQuestCreditsLabel" parent="." instance=ExtResource( 15 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1920.0
offset_top = 1080.0
offset_right = 1920.0
offset_bottom = 1080.0
